# UtterAI_AI

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml  requirements.common.txt  requirements.cpu.txt  requirements.gpu.txt  requirements.txt
.github/workflows/: ai-ci.yaml  ai-ecr-push.yaml
app/: config.py  main.py
app/api/: health.py  insight_map.py  jobs.py  rag.py  report_chat.py
app/lambda/: collect_papers_handler.py
app/metrics/: __init__.py  ciu.py  disfluency.py  fcm.py  lexical_diversity.py  llu.py  mlu.py  pcc.py  response_latency.py
app/mocks/: mock_metrics.py  mock_session.py  mock_utterances.py
app/models/: asr_whisper.py  base.py  diarization_pyannote.py  embedding_kure.py  llm_exaone.py  vad_silero.py
app/observability/: __init__.py  metrics.py  otel.py  phoenix.py  sqs.py
app/pipelines/: agentcore_client.py  alignment.py  analysis_pipeline.py  audio_preprocess.py  bedrock_client.py  metrics_pipeline.py  report_chat_pipeline.py  report_pipeline.py
app/rag/: chunker.py  ingest.py  ontology.yaml  paper_metadata.py  prompt_templates.py  rag_graph.py  retriever.py  semantic_layer.py  vector_store.py
app/schemas/: __init__.py  audio.py  job.py  metrics.py  rag.py  report.py  segment.py  transcript.py
app/storage/: db.py  rds.py  s3_client.py
app/utils/: audio.py  ids.py
app/workers/: analysis_worker.py  cpu_worker.py  llm_gpu_worker.py  ml_gpu_worker.py  rag_ingest_worker.py
docs/: ADR-001-agentic-rag.md  ADR-002-agentcore-harness-vs-strands.md  ADR-003-insight-map-agent-runtime.md  ADR-004-agentic-rag-5-agent-graph.md  AGENTIC_RAG_GUIDE.md  AI_IMPLEMENTATION_GUIDE.md  AI_PIPELINE_OPTIMIZATION.md  ASR_POSTPROCESS_FIX.md  ASR_UPGRADE.md  CODE_FLOW.md  DATABASE_SETUP.md  EKS_WORKER_ARCHITECTURE.md  MODEL_LOADING_GUIDE.md  RAG_EVALUATION_GUIDE.md  RAG_GUIDE.md  RAG_IMPLEMENTATION.md  RAG_KNOWLEDGE_BASE_DESIGN.md  RAG_LAYER1_EVAL_RESULTS.md  RAG_P0_DOCUMENTS.md  RAG_P1_DOCUMENTS.md  RAG_P2_P3_DOCUMENTS.md  RAG_SETUP_CHANGELOG.md  knowledge_graph.html  ontology_map.html
docs/eval/: EVAL_LOG.md
docs/rag/: doc_aac_adult__성인_AAC_도입_및_전환_가이드.txt  doc_aac_child__아동_AAC_선별_및_초기_중재_가이드.txt  doc_adult_discourse__성인_담화_분석_지표_가이드.txt  doc_adult_slp_guide__성인_언어재활_평가_및_지표_가이드.txt  doc_asd_pragmatics__ASD_아동_화용_사회적_의사소통_평가_가이드.txt  doc_child_assessment_tools__아동_표준검사_도구_가이드.txt  doc_child_slp_population__아동_언어재활_대상군_가이드.txt  doc_dementia_language__치매_단계별_의사소통_지원_가이드.txt  doc_dld_vs_delay__언어발달지연과_DLD_감별_가이드.txt  doc_dysarthria_types__성인_마비말장애_평가_및_중재_가이드.txt  doc_fcm_guide__기능적_의사소통_결과_기록_가이드.txt  doc_fluency_guide__유창성장애_평가_및_중재_가이드.txt  doc_goal_writing_guide__임상_목표_작성_가이드.txt  doc_korean_morphosyntax__한국어_형태통사_임상_가이드.txt  doc_language_sample_metrics__언어표본분석_핵심지표_가이드.txt  doc_latency__반응_지연_시간_해석_가이드.txt  doc_metric_ciu_korean_rule__CIU_계산_규칙.txt  doc_metric_exception_rule__발화_계산_공통_제외_기준.txt  doc_metric_mlu_korean_rule__한국어_MLU_계산_규칙.txt  doc_metric_pcc_korean_rule__한국어_PCC_계산_규칙.txt  doc_milieu_teaching__환경중심언어중재_전략_가이드.txt  doc_mlu_guide__MLU_해석_가이드.txt  soap_note_template.txt  (+7 more)
scripts/: benchmark_asr_postprocess.py  collect_papers.py  create_tables.py  dev_run.py  eval_retrieval.py  ingest_rag_docs.py  init_db.sql  patch_pyannote.py  run_cpu_worker.py  run_llm_gpu_worker.py  run_ml_gpu_worker.py  test_models.py  test_pipeline.py
tests/: conftest.py
(+25 files in other folders)
