[project]
name = "utterai-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # AWS
    "boto3>=1.34.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.1.19",
    "pgvector>=0.3.2",
    # ML / RAG
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "kiwipiepy>=0.18.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0.1",
    # Utils
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "transformers>=4.41.0",
    "accelerate>=0.30.0",
    "pyannote.audio>=3.3.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
    "onnxruntime>=1.18.0",
    "huggingface_hub>=0.23.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
