[project]
name = "utterai-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # AWS
    "boto3>=1.34.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary]>=3.1.19",
    "pgvector>=0.3.2",
    # ML / RAG
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
    "kiwipiepy>=0.18.0",
    "langgraph>=0.2.0",
    "pyyaml>=6.0.1",
    "pymupdf>=1.24.0",
    # Utils
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
    "psycopg2-binary>=2.9.12",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp>=1.27.0,<2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<0.49.0",
    "opentelemetry-instrumentation-httpx>=0.48b0,<0.49.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0,<0.49.0",
    "opentelemetry-instrumentation-botocore>=0.48b0,<0.49.0",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.18.0",
    "huggingface_hub>=0.23.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
]
gpu = [
    # torch 2.4.x: torchaudio.AudioMetaData top-level 제거 전 마지막 안정 버전
    # torch 2.5+ 필요한 transformers 5.x 와 함께 쓰면 float8_e8m0fnu AttributeError 발생
    "torch==2.4.1",
    "torchaudio==2.4.1",
    # transformers 5.x 는 torch 2.5+ 요구 → 4.47.1 고정
    "transformers==4.47.1",
    "accelerate>=0.30.0",
    # faster-whisper: CTranslate2 기반 Whisper 실행 엔진
    # transformers pipeline 대비 2-4배 빠르고 장문 오디오 처리가 안정적
    "faster-whisper>=1.1.0",
    "pyannote.audio>=3.3.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.0",
    "ffmpeg-python>=0.2.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
